# MNISTMultiGPUSample

./: .gitignore  pyproject.toml
mnist_multi_gpu_sample/: encoder_decoder.py  multi.py  pipeline.py  single.py
