[tool.poetry]
name = "mnist-multi-gpu-sample"
version = "0.1.0"
description = ""
authors = ["myxy <m.myxomatosis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.1.0+cu118", source = "torch_cu118"}
torchvision = {version = "^0.16.0+cu118", source = "torch_cu118"}
tqdm = "^4.66.1"
matplotlib = "^3.8.2"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
